--- a/Dockerfile.upx
+++ b/Dockerfile.upx
@@ -14,7 +14,7 @@ RUN adduser \
     --uid "${UID}" \    
     "${USER}"
 ADD . /src
-RUN cd /src && GOOS=linux go build -ldflags="-s -w" -o hello-world
+RUN cd /src && GOOS=linux go build -ldflags="-s -w" -o hello-world && upx hello-world
 
 # STEP 2/2 of multi-stage build: build the image. This will be much smaller than just using FROM golang:alpine directly
 FROM alpine
