Updates to work with go in 2024

--- a/Dockerfile.upx
+++ b/Dockerfile.upx
@@ -14,7 +14,9 @@ RUN adduser \
     --uid "${UID}" \    
     "${USER}"
 ADD . /src
-RUN cd /src && GOOS=linux go build -ldflags="-s -w" -o hello-world && upx hello-world
+WORKDIR /src
+RUN go mod init github.com/e-desouza/go-hello-world
+RUN GOOS=linux go build -ldflags="-s -w" -o hello-world && upx hello-world
 
 # STEP 2/2 of multi-stage build: build the image. This will be much smaller than just using FROM golang:alpine directly
 FROM alpine
@@ -25,4 +27,5 @@ WORKDIR /app
 COPY --from=builder /src/hello-world /app/
 # Use an unprivileged user.
 USER nonrootuser:nonrootuser
+EXPOSE 8080
 ENTRYPOINT ./hello-world
